tests/ui/closures/2229_closure_analysis/feature-gate-capture_disjoint_fields.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/feature-gate-capture_disjoint_fields.rs:8:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: First Pass analysis includes:
  --> $DIR/feature-gate-capture_disjoint_fields.rs:12:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("This uses new capture analyysis to capture s={}", s);
...  |
LL | |     };
   | |_____^
   |
note: Capturing s[] -> Immutable
  --> $DIR/feature-gate-capture_disjoint_fields.rs:15:69
   |
LL |         println!("This uses new capture analyysis to capture s={}", s);
   |                                                                     ^

error: Min Capture analysis includes:
  --> $DIR/feature-gate-capture_disjoint_fields.rs:12:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("This uses new capture analyysis to capture s={}", s);
...  |
LL | |     };
   | |_____^
   |
note: Min Capture s[] -> Immutable
  --> $DIR/feature-gate-capture_disjoint_fields.rs:15:69
   |
LL |         println!("This uses new capture analyysis to capture s={}", s);
   |                                                                     ^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
